BLINKER3/BAS/BLINKER.BI

'*******************************************************
'
' Blinker 2.1 function header for BASIC
'
' Copyright (C) ASM inc, 1992, 1993
'
'*******************************************************

DECLARE FUNCTION BLICUROVL%    CDECL
DECLARE FUNCTION BLICURSIZ%    CDECL
DECLARE FUNCTION BLIDBGHAN%    CDECL (BYVAL handle AS INTEGER)
DECLARE FUNCTION BLIDEMCAL%    CDECL (BYVAL DemoLimit AS INTEGER)
DECLARE FUNCTION BLIDEMDTEBAS$ CDECL
DECLARE FUNCTION BLIDEMMIN%    CDECL (BYVAL DemoLimit AS INTEGER)
DECLARE SUB      BLIDISTRC     CDECL (BYVAL handle AS INTEGER)
DECLARE FUNCTION BLIERRNUM%    CDECL
DECLARE FUNCTION BLIERRPRMBAS$ CDECL
DECLARE FUNCTION BLIOVLOPS%    CDECL
DECLARE SUB      BLIOVLRES     CDECL
DECLARE FUNCTION BLIOVLSIZ%    CDECL (BYVAL OvlPoolSize AS INTEGER)
DECLARE SUB      BLIOVLSUS     CDECL (BYVAL Level AS INTEGER)
DECLARE FUNCTION BLISERNUMBAS$ CDECL
DECLARE FUNCTION BLITOTACT%    CDECL
DECLARE FUNCTION BLITOTLOD%    CDECL
DECLARE FUNCTION BLITOTSIZ%    CDECL
DECLARE FUNCTION BLIVERNUM%    CDECL

DECLARE FUNCTION SWPADDENV%    CDECL (BYVAL ExtraBytes AS INTEGER)
DECLARE FUNCTION SWPADDSTRBAS% CDECL (ProgId AS STRING, RetString AS STRING)
DECLARE FUNCTION SWPCURDIR%    CDECL (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPDISMSG%    CDECL (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPEMS320%    CDECL (BYVAL MemKB AS INTEGER)
DECLARE FUNCTION SWPERRLEV%    CDECL
DECLARE FUNCTION SWPERRMAJ%    CDECL
DECLARE FUNCTION SWPERRMIN%    CDECL
DECLARE FUNCTION SWPFREEMS%    CDECL (BYVAL MemKB AS INTEGER)
DECLARE FUNCTION SWPFREXMS%    CDECL (BYVAL MemKB AS INTEGER)
DECLARE FUNCTION SWPGETKEY%    CDECL (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPGETPIDBAS% CDECL (ProgId AS STRING)
DECLARE FUNCTION SWPGETSTRBAS$ CDECL
DECLARE FUNCTION SWPKEYBRDBAS% CDECL (KeyString AS STRING)
DECLARE FUNCTION SWPKEYCLR%    CDECL (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPNOBOOT%    CDECL (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPRUNCMDBAS% CDECL (Program AS STRING, BYVAL FreeMem AS INTEGER, RunPath AS STRING, TmpPath AS STRING)
DECLARE FUNCTION SWPSETENVBAS% CDECL (Environment AS STRING)
DECLARE FUNCTION SWPSETPIDBAS% CDECL (ProgId AS STRING)
DECLARE FUNCTION SWPSETSTRBAS% CDECL (ProgId AS STRING, RetString AS STRING)
DECLARE FUNCTION SWPUSEEMS%    CDECL (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPUSEUMB%    CDECL (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPUSEXMS%    CDECL (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPVIDMDE%    CDECL (BYVAL Flag AS INTEGER)

CONST SWPNONERR=0    ' No error
CONST SWPDSKFUL=1    ' Disk full
CONST SWPDSKOPE=2    ' Disk file open error
CONST SWPDSKERR=3    ' Disk i/o error
CONST SWPDIRERR=4    ' Change directory error
CONST SWPCREERR=5    ' Temp file create error
CONST SWPDRVERR=6    ' Change drive error
CONST SWPEMSERR=7    ' EMS error
CONST SWPXMSERR=8    ' XMS error
CONST SWPCMDERR=9    ' SHELL error
CONST SWPHANERR=10   ' Handle table too big to save
CONST SWPMEMERR=11   ' Top of memory decreased error
CONST SWPMCBERR=12   ' MCB chain corrupt
CONST SWPMCBCNT=13   ' Too many MCBs
CONST SWPBLKERR=14   ' DOS memory function call error
CONST SWPMEMRES=15   ' Error reallocating segment
CONST SWPCSPERR=16   ' No COMSPEC setting found
CONST SWPINTERR=254  ' Internal error

' Non fatal minor error codes when major error code is zero

CONST SWPKILTSR = 1  ' TSR was removed
CONST SWPMEMINC = 2  ' Top of memory increased
